--- a/Designer/Interface/Service/Callback.xaml
+++ b/Designer/Interface/Service/Callback.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="NETPath.Interface.Service.Method" x:ClassModifier="internal"
+﻿<Grid x:Class="NETPath.Interface.Service.Callback" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,7 +18,6 @@
 		<Service:ReleaseInstanceModeConverter x:Key="ReleaseInstanceModeConverter" />
 		<Service:TransactionFlowModeConverter x:Key="TransactionFlowModeConverter" />
 		<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
-		<pc:NotBoolVisibilityConverter x:Key="NotBoolVisibilityConverter" />
 		<pc:NotBoolConverter x:Key="NotBoolConverter"/>
 	</Grid.Resources>
 	<Grid.RowDefinitions>
@@ -119,10 +118,9 @@
 						<ColumnDefinition Width="*"/>
 						<ColumnDefinition Width="*"/>
 						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="Auto" />
 						<RowDefinition Height="Auto" />
 						<RowDefinition Height="Auto" />
 						<RowDefinition Height="15" />
@@ -134,15 +132,13 @@
 					<ToggleButton Content="Server Awaitable" IsChecked="{Binding Path=MethodData.UseServerAwaitPattern}" Margin="5" Grid.Column="2" Grid.Row="1" />
 					<ToggleButton Content="Client Synchronous" IsChecked="{Binding Path=MethodData.UseClientSyncPattern}" Margin="5" Grid.Column="3" Grid.Row="1" />
 					<ToggleButton Content="Client Awaitable" IsChecked="{Binding Path=MethodData.UseClientAwaitPattern}" IsEnabled="{Binding Path=MethodData.IsTerminating, Converter={StaticResource NotBoolConverter}}" Margin="5" Grid.Column="4" Grid.Row="1" />
-					<ToggleButton Content="Initiating" IsChecked="{Binding Path=MethodData.IsInitiating}" Margin="5" Grid.Column="1" Grid.Row="2" Checked="Initiating_Checked" />
-					<ToggleButton Content="Terminating" IsChecked="{Binding Path=MethodData.IsTerminating}" Margin="5" Grid.Column="2" Grid.Row="2" Checked="Terminating_Checked" />
-					<ToggleButton Content="One Way" IsChecked="{Binding Path=MethodData.IsOneWay}" Margin="5" Grid.Column="3" Grid.Row="2" />
-					<Label Content="Contract Options:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="5" />
-					<ToggleButton Content="Operation Behavior" IsChecked="{Binding Path=MethodData.HasOperationBehavior}" Margin="5" Grid.Column="1" Grid.Row="5" />
-					<ToggleButton Content="REST Method" IsChecked="{Binding Path=MethodData.IsRESTMethod}" Margin="5" Grid.Column="2" Grid.Row="5" />
-					<ToggleButton Content="Hidden" IsChecked="{Binding Path=MethodData.IsHidden}" Margin="5" Grid.Column="4" Grid.Row="5" />
-					<Label Content="Protection:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="5" />
-					<ComboBox Height="23" Margin="90,5,5,5" SelectedIndex="{Binding Path=MethodData.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="3" Grid.Row="5" >
+					<ToggleButton Content="One Way" IsChecked="{Binding Path=MethodData.IsOneWay}" Margin="5" Grid.Column="5" Grid.Row="1" />
+					<Label Content="Contract Options:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="3" />
+					<ToggleButton Content="Operation Behavior" IsChecked="{Binding Path=MethodData.HasOperationBehavior}" Margin="5" Grid.Column="1" Grid.Row="3" />
+					<ToggleButton Content="REST Method" IsChecked="{Binding Path=MethodData.IsRESTMethod}" Margin="5" Grid.Column="2" Grid.Row="3" />
+					<ToggleButton Content="Hidden" IsChecked="{Binding Path=MethodData.IsHidden}" Margin="5" Grid.Column="4" Grid.Row="3" />
+					<Label Content="Protection:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="3" />
+					<ComboBox Height="23" Margin="90,5,5,5" SelectedIndex="{Binding Path=MethodData.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="3" Grid.Row="3" >
 						<ComboBoxItem Content="None" />
 						<ComboBoxItem Content="Sign" />
 						<ComboBoxItem Content="Encrypt and Sign" />
@@ -183,45 +179,6 @@
 					<ToggleButton Content="Auto Dispose Parameters" IsChecked="{Binding Path=MethodData.OBAutoDisposeParameters}" Margin="5" Grid.Column="0" Grid.Row="2" />
 					<ToggleButton Content="Transation Auto Complete" IsChecked="{Binding Path=MethodData.OBTransactionAutoComplete}" Margin="5" Grid.Column="1" Grid.Row="2" />
 					<ToggleButton Content="Transaction Scope Required" IsChecked="{Binding Path=MethodData.OBTransactionScopeRequired}" Margin="5" Grid.Column="2" Grid.Row="2" />
-				</Grid>
-				<Grid Visibility="{Binding Path=MethodData.IsRESTMethod, Converter={StaticResource BoolVisibilityConverter}}" Grid.Row="2" Margin="0,5,0,0">
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*"/>
-						<ColumnDefinition Width="*"/>
-					</Grid.ColumnDefinitions>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="Auto" />
-					</Grid.RowDefinitions>
-					<Label Grid.Row="0" Content="REST" FontSize="12pt" Margin="0,5,0,0" />
-					<Label Content="URI Template:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" />
-					<pc:TextBox Text="{Binding Path=MethodData.REST.UriTemplate}" Height="23" Margin="111,5,5,5" VerticalContentAlignment="Center" Grid.Row="1" Grid.ColumnSpan="2" />
-					<Label Content="HTTP Verb:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0" />
-					<ComboBox Height="23" Margin="111,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.Method, Converter={StaticResource MethodRESTVerbsConverter}}" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0" >
-						<ComboBoxItem Content="GET" />
-						<ComboBoxItem Content="POST" />
-						<ComboBoxItem Content="PUT" />
-						<ComboBoxItem Content="DELETE" />
-					</ComboBox>
-					<Label Content="Body Style:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="1" />
-					<ComboBox Height="23" Margin="120,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.BodyStyle, Converter={StaticResource WebMessageBodyStyleConverter}}" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="1" >
-						<ComboBoxItem Content="Bare" />
-						<ComboBoxItem Content="Wrapped" />
-						<ComboBoxItem Content="Wrapped Request" />
-						<ComboBoxItem Content="Wrapped Response" />
-					</ComboBox>
-					<Label Content="Request Format:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" />
-					<ComboBox Height="23" Margin="111,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.RequestFormat, Converter={StaticResource WebMessageFormatConverter}}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" >
-						<ComboBoxItem Content="XML" />
-						<ComboBoxItem Content="JSON" />
-					</ComboBox>
-					<Label Content="Response Format:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="1" />
-					<ComboBox Height="23" Margin="120,5,5,5" SelectedIndex="{Binding Path=MethodData.REST.ResponseFormat, Converter={StaticResource WebMessageFormatConverter}}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="1" >
-						<ComboBoxItem Content="XML" />
-						<ComboBoxItem Content="JSON" />
-					</ComboBox>
 				</Grid>
 			</Grid>
 		</TabItem>
