Removed dependencies on ActiPro and SyncFusion.RichTextBoxAdv. Fixed incorrect application of abstract/base.

--- a/Designer/Interface/Documentation/Standard.xaml
+++ b/Designer/Interface/Documentation/Standard.xaml
@@ -16,18 +16,13 @@
 		<ColumnDefinition Width="*" />
 	</Grid.ColumnDefinitions>
 	<Label Content="Summary" Grid.Row="0" Grid.Column="0" />
-	<!--<TextBox Text="{Binding Path=Documentation.Summary}" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
-	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Summary}" IsReadOnly="False" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<TextBox Text="{Binding Path=Documentation.Summary}" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label Content="Remarks" Grid.Row="0" Grid.Column="1" />
-	<!--<TextBox Text="{Binding Path=Documentation.Remarks}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
-	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Remarks}" IsReadOnly="False" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<TextBox Text="{Binding Path=Documentation.Remarks}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label Content="Example" Grid.Row="2" Grid.Column="0" />
-	<!--<TextBox Text="{Binding Path=Documentation.Example}" Grid.Row="3" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
-	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Example}" IsReadOnly="False" Grid.Row="3" Grid.Column="0" Margin="0,0,5,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<TextBox Text="{Binding Path=Documentation.Example}" Grid.Row="3" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label x:Name="ReturnsLabel" Content="Returns" Grid.Row="2" Grid.Column="1" />
-	<!--<TextBox x:Name="ReturnsEditor" Text="{Binding Path=Documentation.Returns}" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
-	<sf:RichTextBoxAdv x:Name="ReturnsEditor" HTMLText="{Binding Documentation.Returns}" IsReadOnly="False" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<TextBox x:Name="ReturnsEditor" Text="{Binding Path=Documentation.Returns}" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label x:Name="ValueLabel" Content="Value" Grid.Row="2" Grid.Column="1" />
-	<!--<TextBox x:Name="ValueEditor" Text="{Binding Path=Documentation.Value}" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
-	<sf:RichTextBoxAdv x:Name="ValueEditor" HTMLText="{Binding Documentation.Value}" IsReadOnly="False" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<TextBox x:Name="ValueEditor" Text="{Binding Path=Documentation.Value}" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 </Grid>
