--- a/Designer/Interface/REST/Method.xaml
+++ b/Designer/Interface/REST/Method.xaml
@@ -190,6 +190,8 @@
 									<Grid.ColumnDefinitions>
 										<ColumnDefinition Width=".5*" />
 										<ColumnDefinition Width="*" />
+										<ColumnDefinition Width="Auto" />
+										<ColumnDefinition Width="*" />
 										<ColumnDefinition Width="*" />
 										<ColumnDefinition Width="75" />
 										<ColumnDefinition Width="75" />
@@ -198,11 +200,13 @@
 									</Grid.ColumnDefinitions>
 									<Data:TypeSelector x:Name="OperationParameterDataType" OpenType="{Binding Path=Type, Mode=TwoWay}" Project="{Binding ElementName=ProjectBinding, Path=DataContext}" Grid.Column="0" Margin="0,5,5,5" VerticalContentAlignment="Center" ToolTip="{Binding Path=Type}"  />
 									<pc:TextBox Name="OperationParameterElementName" Text="{Binding Path=Name}" Grid.Column="1" Margin="5" VerticalContentAlignment="Center" PreviewKeyDown="OperationParameterElementName_PreviewKeyDown" Validate="OperationParameterElementName_Validate" ToolTip="{Binding Path=Name}" />
-									<pc:TextBox Name="OperationParameterDocumentation" Text="{Binding Path=Documentation.Summary}" LabelText="Documentation" Margin="5" Grid.Column="2" VerticalContentAlignment="Center" PreviewKeyDown="OperationParameterDocumentation_PreviewKeyDown" ToolTip="{Binding Path=Name}" />
-									<RadioButton Content="Serialize" IsChecked="{Binding Path=Serialize}" Grid.Column="3" IsEnabled="{Binding Path=IsSerializable}" />
-									<ToggleButton Content="Hidden" IsChecked="{Binding Path=IsHidden}" Margin="5" Grid.Column="4" />
-									<Label Content="Click to Move" FontSize="10" FontStyle="Italic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="5" />
-									<Button Name="DeleteOperationParameter" Visibility="Hidden" Grid.Column="6" Margin="1,1,2,1" Padding="0" Click="DeleteOperationParameter_Click">
+									<Label Content=" = " FontStyle="Italic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="2" />
+									<pc:TextBox Name="OperationParameterElementDefaultValue" Text="{Binding Path=DefaultValue}" LabelText="Default Value" Grid.Column="3" Margin="5" VerticalContentAlignment="Center" PreviewKeyDown="OperationParameterElementName_PreviewKeyDown" ToolTip="{Binding Path=Name}" />
+									<pc:TextBox Name="OperationParameterDocumentation" Text="{Binding Path=Documentation.Summary}" LabelText="Documentation" Margin="5" Grid.Column="4" VerticalContentAlignment="Center" PreviewKeyDown="OperationParameterDocumentation_PreviewKeyDown" ToolTip="{Binding Path=Name}" />
+									<RadioButton Content="Serialize" IsChecked="{Binding Path=Serialize}" Grid.Column="5" IsEnabled="{Binding Path=IsSerializable}" />
+									<ToggleButton Content="Hidden" IsChecked="{Binding Path=IsHidden}" Margin="5" Grid.Column="6" />
+									<Label Content="Click to Move" FontSize="10" FontStyle="Italic" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="7" />
+									<Button Name="DeleteOperationParameter" Visibility="Hidden" Grid.Column="8" Margin="1,1,2,1" Padding="0" Click="DeleteOperationParameter_Click">
 										<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 									</Button>
 								</Grid>
